# PracticeCpp

./: .gitignore  README.md  Struct_AllocationCount.cpp  Tokenizing_with_streams.cpp  chalenge_verticaltraversal.cpp  challange_pythagoreantriplet.cpp  challenge_NGE.cpp  challenge_binarytree_serialise.cpp  challenge_canJump.cpp  challenge_editdist.cpp  challenge_findbitspattern.c  challenge_firstnonrepchar.cpp  challenge_klargestarray.cpp  challenge_longestcommonsubstr.cpp  challenge_longestsubstrnorepchar.cpp  challenge_maxsubarray.cpp  challenge_mergeksortedarray.cpp  challenge_rotatearraybyd.cpp  challenge_rotatematrix.cpp  challenge_slidingwindowmax.cpp  challenge_specialstack.cpp  challenge_stockspan.cpp  challenge_transactionID.cpp  directive_pragma.cpp  largesthistarea.cpp  library_atomic2.cpp  library_charconv.cpp  library_generator.cpp  library_mdspan.cpp  library_new.cpp  library_sharedmutex.cpp  library_span.cpp  library_stoptoken.cpp  theory_bitset_toullong.cpp  theory_competitivetricks.cpp  theory_conditionvariable.cpp  theory_constexpr.cpp  theory_countrzero.cpp  theory_deque_shrinktofit.cpp  theory_enumclass.cpp  (+21 more)
c_stuff/: dynamic_arr.c  function_ptr.c  memcmp.c
challenge/: challange_removeInvalidParentheses.cpp  challenge_balancedbrackets.cpp  challenge_canJump.cpp  challenge_celebrity.cpp  challenge_climbingstairs.cpp  challenge_deck_class.cpp  challenge_distinctsubstring.cpp  challenge_enumsOfCards.cpp  challenge_fibonacci.cpp  challenge_findEarliestRepeatingChar.cpp  challenge_lcs.cpp  challenge_mergetwosortedarrays.cpp  challenge_noTwoCharsAdjSame.cpp  challenge_reverselinkedlist.cpp  challenge_specialstack.cpp  challenge_sticklerthief.cpp  challenge_stringpermutations.cpp  challenge_tripletSumInArray.cpp
cpp_versions/coroutine/: CMakeLists.txt  coroutine_handle.cpp  generator.cpp  readme.md  return.cpp
cpp_versions/test/: CMakeLists.txt  mytest.cpp
embed/: cache_optimisation.cpp  embed_atomic.cpp  embed_binaryliterals.cpp  embed_chrono.cpp  embed_static_assert.cpp  embed_userdefinedliterals.cpp  theory_const_volatile.cpp
embedded/: embed_atomic2.cpp  embed_enumclass.cpp  embed_usingkeyword.cpp
finance/: conversion_operator.cpp  endofprogram.cpp  references.cpp  resource_aquisition_is_initalisation.cpp  (+4 more)
quant/network/simple_tcp/: .gitignore  CMakeLists.txt  PLAN.md  Readme.md  client  client.cpp  server  server.cpp
quant/network/simple_tcp/include/: timer.hpp
quant/network/simple_tcp/src/: client.cpp  server.cpp
vs_testbench/: .gitignore  CMakeLists.txt  README.md  run.sh
vs_testbench/include/: header1.hpp  timer.hpp
vs_testbench/src/: main.cpp
(+457 files in other folders)
